Prefer String#formatted over String#format Remove visibility modifier from beans Normalize Spring properties to kebab-case Replace String literals with HttpHeaders constants Use assertJ's isPresent for optional checks Prefer List#of instead of using Collections#singletonList Remove the @Autowired annotation on inferred constructor Dependency updates